tests/errors/sem_assign4.java
public class sem_assign4 {
public static void main(String[] args){
int value ; value = "HhkOjtJMn";
}
}